recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: not found: value lenght
		tree(steps-1, lenght*shrink , angle , shrink)
                              ^Tree:12: error: not found: value lenght
		recule(lenght)
                       ^